--- a/profile.css
+++ b/profile.css
@@ -68,7 +68,9 @@ header h1 {
     font-size: 30px; 
     letter-spacing: 4px; 
     font-family: 'Source Sans Pro', sans-serif; 
-} 
+}  
+
+/* main area of work  */
 
 .work_area {
     display: flex;  
@@ -80,10 +82,6 @@ header h1 {
    align-items: center;
 }  
 
-.work_item_one_photo {
-
-}
-
 .work_item_one p {
     margin: 0;
     padding: 0;
@@ -91,7 +89,121 @@ header h1 {
 
 .work_item_one {
     width: 500px;
-
     text-align: justify; 
     font-family: 'Source Sans Pro', sans-serif; 
+} 
+
+/* Work Eduation  */ 
+
+.Education_header{
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+    width: 100%;
+    height: 30px; 
+    margin-top: 60px;
+
+} 
+
+.Education_header h2 {
+    font-size: 30px; 
+    letter-spacing: 4px; 
+    font-family: 'Source Sans Pro', sans-serif; 
+}   
+
+/* Education_area */ 
+
+.Education_area {
+    width: 100%;
+    display: flex; 
+    margin-top: 40px;
+    justify-content: space-evenly; 
+    align-items: center; 
+    flex-direction: row;
+}  
+
+.Education_item_one {
+    width: 500px; 
+    text-align: justify; 
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+#Makers_logo {
+    width: 240px;
+    height: 240px;
+} 
+
+/* Projects header  */
+
+.Projects {
+    width: 100%; 
+    display: flex; 
+    height: 30px;  
+    margin-top: 60px; 
+    justify-content: center;
+    align-items: center; 
+    font-family: 'Source Sans Pro', sans-serif;
+}  
+
+.Projects h2 {
+    font-size: 30px; 
+    letter-spacing: 4px; 
+    font-family: 'Source Sans Pro', sans-serif; 
+} 
+
+/* Projects  */
+
+.Coding_Projects {
+    width: 100%; 
+    display: flex;
+    margin-top: 60px; 
+    margin-bottom: 40px;
+    justify-content: space-evenly;
+} 
+
+.item_one {
+    width: 200px;
+    height: 200px; 
+    background-position: center;
+    background-image: url(./images/duck_star.png); 
+    background-repeat: none;
+    background-size: contain;
+}
+
+.item_two {
+    width: 200px;
+    height: 200px; 
+    background-position: center;
+    background-image: url(./images/Messaging_app.gif); 
+    background-repeat: none;
+    background-size: contain;
+}
+
+.item_three {
+    width: 200px;
+    height: 200px; 
+    background-position: center;
+    background-image: url(./images/Chitter_app_git.gif); 
+    background-repeat: none;
+    background-size: contain;
+} 
+
+/* hobbies  */ 
+
+.hobbies {
+    width: 100%;  
+    margin-top: 40px;
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+} 
+
+.hobbies ul {
+    list-style: none;   
+    line-height: 40px; 
+    font-family: 'Source Sans Pro', sans-serif;
+} 
+
+#hub:hover {
+    color: pink;
 }
