--- a/profile.css
+++ b/profile.css
@@ -41,17 +41,52 @@ header h1 {
 .main_profile {
     display: flex;
     justify-content: center; 
-    align-items: center;  
+    align-items: center;   
+    margin-top: 50px; 
     width: 100%;
 } 
 
-.main_profile p {
-    width: 60%;
+.main_profile p { 
+    width: 40%;
     text-align: justify; 
-    margin-top: 50px; 
     font-family: 'Source Sans Pro', sans-serif;  
     line-height: 25px;
+}   
+
+.main_profile img {
+    width: 14%; 
+    margin-right: 50px;
+}
+
+/* soical media  */ 
+
+.More_info { 
+    width: 96%; 
+    height: 60px;
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
 } 
+
+.More_info ul {
+    display: inline-flex; 
+} 
+
+.More_info ul li {
+    padding: 0px 30px; 
+    list-style: none; 
+    font-family: 'Source Sans Pro', sans-serif; 
+}  
+
+#soical_link { 
+    color: black;
+    text-decoration: none;
+}
+
+#soical_link:hover {
+    color: pink; 
+    text-decoration: none;
+}
 
 /* work  */
 
@@ -61,7 +96,7 @@ header h1 {
     align-items: center;  
     width: 100%;
     height: 30px; 
-    margin-top: 40px;
+    margin-top: 120px;
 } 
 
 .work_header h2 {
@@ -101,7 +136,7 @@ header h1 {
     align-items: center;   
     width: 100%;
     height: 30px; 
-    margin-top: 60px;
+    margin-top: 120px;
 
 } 
 
@@ -133,13 +168,15 @@ header h1 {
     height: 240px;
 } 
 
+
+
 /* Projects header  */
 
 .Projects {
     width: 100%; 
     display: flex; 
     height: 30px;  
-    margin-top: 60px; 
+    margin-top: 100px; 
     justify-content: center;
     align-items: center; 
     font-family: 'Source Sans Pro', sans-serif;
@@ -158,41 +195,77 @@ header h1 {
     display: flex;
     margin-top: 60px; 
     margin-bottom: 40px;
-    justify-content: space-evenly;
+    justify-content: space-evenly;  
+}   
+
+.Coding_Projects a {
+    text-decoration: none; 
+    color: black;
 } 
 
+#link:hover {
+    color: pink;
+}
+
 .item_one {
+    text-align: center; 
+    font-family: 'Source Sans Pro', sans-serif;  
+}
+
+.item_one img {
     width: 200px;
-    height: 200px; 
-    background-position: center;
-    background-image: url(./images/duck_star.png); 
-    background-repeat: none;
-    background-size: contain;
+    height: 200px;  
+}   
+
+.item_one p {
+    width: 200px; 
+    text-align: center; 
+}
+
+#projects {
+    transition: background-color 0.2s;
+}
+
+#projects:hover { 
+    color: pink;
 }
 
 .item_two {
+    text-align: center; 
+    font-family: 'Source Sans Pro', sans-serif; 
+}
+
+.item_two img {
     width: 200px;
     height: 200px; 
-    background-position: center;
-    background-image: url(./images/Messaging_app.gif); 
-    background-repeat: none;
-    background-size: contain;
+}  
+
+.item_two p {
+    width: 200px; 
+    text-align: center;
 }
 
 .item_three {
+    text-align: center; 
+    font-family: 'Source Sans Pro', sans-serif; 
+}
+
+.item_three img {
     width: 200px;
     height: 200px; 
-    background-position: center;
-    background-image: url(./images/Chitter_app_git.gif); 
-    background-repeat: none;
-    background-size: contain;
-} 
+}  
+
+.item_three p {
+    width: 200px; 
+    text-align: center;
+}
 
 /* hobbies  */ 
 
 .hobbies {
     width: 100%;  
-    margin-top: 40px;
+    margin-top: 40px; 
+    margin-bottom: 100px;
     display: flex; 
     justify-content: center; 
     align-items: center;
@@ -206,4 +279,34 @@ header h1 {
 
 #hub:hover {
     color: pink;
+} 
+
+/* footer */ 
+
+.end {
+    display: flex;
+    width: 100%;
+    height: 80px; 
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: 'Source Sans Pro', sans-serif; 
+    background-color: pink;
+} 
+
+.end_item ul {
+    display: inline-flex;
+} 
+
+.end_item ul li {
+    padding: 0px 20px; 
+    list-style: none; 
+} 
+
+.end_item ul a {
+    text-decoration: none; 
+    color: black;
+} 
+
+#soical:hover {
+    color: white;
 }
