--- a/profile.css
+++ b/profile.css
@@ -7,18 +7,62 @@ body {
 
 header {
     width: 100%;
-    height: 300px;
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: center; 
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 } 
 
 header h1 {
     font-family: 'Source Sans Pro', sans-serif; 
     font-size: 36px; 
     letter-spacing: 4px;
+}  
+
+/* nav bar in here */ 
+
+nav {
+    width: 100%; 
+    height: 110px;
+    display: flex; 
+    justify-content: center;
+    align-items: center; 
+    margin-bottom: 100px;
 } 
+
+nav ul {
+
+} 
+
+nav ul li {
+    text-decoration: none; 
+    display: inline; 
+    padding: 0 10px; 
+    margin: 0 10px; 
+    font-family: 'Source Sans Pro', sans-serif; 
+} 
+
+
+#nav_profile:hover {
+    color: pink;
+} 
+
+#nav_work:hover {
+    color: pink;
+} 
+
+#nav_education:hover{
+    color: pink;
+} 
+
+#nav_projects:hover{
+    color: pink;
+} 
+
+#nav_hobbies:hover{
+    color: pink;
+}
 
 /* Main page of content  */ 
 
@@ -260,7 +304,23 @@ header h1 {
     text-align: center;
 }
 
-/* hobbies  */ 
+/* hobbies  */  
+
+.hobbies_header {
+    width: 100%; 
+    display: flex; 
+    height: 30px;  
+    margin-top: 100px; 
+    justify-content: center;
+    align-items: center; 
+    font-family: 'Source Sans Pro', sans-serif;
+}  
+
+.hobbies_header h2 {
+    font-size: 30px; 
+    letter-spacing: 4px; 
+    font-family: 'Source Sans Pro', sans-serif; 
+} 
 
 .hobbies {
     width: 100%;  
