--- a/profile.css
+++ b/profile.css
@@ -16,7 +16,7 @@ header {
 
 header h1 {
     font-family: 'Source Sans Pro', sans-serif; 
-    font-size: 36px; 
+    font-size: 46px; 
     letter-spacing: 4px;
 }  
 
@@ -28,11 +28,7 @@ nav {
     display: flex; 
     justify-content: center;
     align-items: center; 
-    margin-bottom: 100px;
-} 
-
-nav ul {
-
+    margin-bottom: 190px;
 } 
 
 nav ul li {
@@ -40,7 +36,8 @@ nav ul li {
     display: inline; 
     padding: 0 10px; 
     margin: 0 10px; 
-    font-family: 'Source Sans Pro', sans-serif; 
+    font-family: 'Source Sans Pro', sans-serif;  
+    letter-spacing: 2px;
 } 
 
 
@@ -73,7 +70,7 @@ nav ul li {
     justify-content: center;
     align-items: center;  
     width: 100%;
-    height: 30px;
+    height: 30px; 
 } 
 
 .Profile_header h2 {
@@ -94,7 +91,7 @@ nav ul li {
     width: 40%;
     text-align: justify; 
     font-family: 'Source Sans Pro', sans-serif;  
-    line-height: 25px;
+    line-height: 25px; 
 }   
 
 .main_profile img {
@@ -245,7 +242,7 @@ nav ul li {
 .Coding_Projects a {
     text-decoration: none; 
     color: black;
-} 
+}  
 
 #link:hover {
     color: pink;
@@ -254,7 +251,7 @@ nav ul li {
 .item_one {
     text-align: center; 
     font-family: 'Source Sans Pro', sans-serif;  
-}
+} 
 
 .item_one img {
     width: 200px;
@@ -263,7 +260,7 @@ nav ul li {
 
 .item_one p {
     width: 200px; 
-    text-align: center; 
+    text-align: center;  
 }
 
 #projects {
@@ -287,8 +284,7 @@ nav ul li {
 .item_two p {
     width: 200px; 
     text-align: center;
-}
-
+} 
 .item_three {
     text-align: center; 
     font-family: 'Source Sans Pro', sans-serif; 
@@ -334,7 +330,8 @@ nav ul li {
 .hobbies ul {
     list-style: none;   
     line-height: 40px; 
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif; 
+    letter-spacing: 2px;
 } 
 
 #hub:hover {
@@ -359,7 +356,8 @@ nav ul li {
 
 .end_item ul li {
     padding: 0px 20px; 
-    list-style: none; 
+    list-style: none;   
+    letter-spacing: 2px;
 } 
 
 .end_item ul a {
