--- a/profile.css
+++ b/profile.css
@@ -23,7 +23,7 @@ header h1 {
 /* nav bar in here */ 
 
 nav {
-    width: 97%; 
+    width: 100%; 
     height: 110px;
     display: flex; 
     justify-content: center;
@@ -87,7 +87,7 @@ nav ul li {
 
 #second_nav 
 {
-    width: 97%; 
+    width: 100%; 
     height: 90px;
     display: none; 
     position: fixed; 
@@ -108,6 +108,15 @@ nav ul li {
     letter-spacing: 2px;
 } 
 
+#second_nav_bar 
+{
+    background-color: pink; 
+    width: 0%;
+    height: 5px; 
+    position: fixed;
+    display: block;
+    top: 85px;
+}
 
 /* Main page of content  */ 
 
