--- a/profile.css
+++ b/profile.css
@@ -5,20 +5,53 @@ body {
 
 /* header of my personal website  */
 
+@keyframes header {
+    0% {opacity: 0; letter-spacing: 14px;}
+    20% {opacity: 0.2; letter-spacing:12px;}
+    40% {opacity: 0.4; letter-spacing: 10px;}
+    60% {opacity: 0.6; letter-spacing: 8px;}
+    90% {opacity: 0.8; letter-spacing: 6px;}
+    100% {opacity: 1.0;  letter-spacing: 4px;}
+} 
+
+@keyframes sideHeader {
+    0% {opacity: 0;}
+    20% {opacity: 0.2; }
+    40% {opacity: 0.4; }
+    60% {opacity: 0.6; }
+    90% {opacity: 0.8; }
+    100% {opacity: 1.0; }
+}
+
 header {
     width: 100%;
-    height: 350px;
-    display: flex;
+    height: 400px;
+    display: flex; 
+    flex-direction: column;
     justify-content: center;
     align-items: center; 
-    margin-bottom: 40px;
+    margin-bottom: 40px; 
 } 
 
 header h1 {
     font-family: 'Source Sans Pro', sans-serif; 
     font-size: 46px; 
-    letter-spacing: 4px;
-}  
+    letter-spacing: 4px; 
+    animation-name: header; 
+    animation-duration: 5s; 
+    animation-timing-function: linear;
+}   
+
+header p {
+    font-family: 'Source Sans Pro', sans-serif;  
+    font-size: 22px;
+    margin: 0px; 
+    padding: 0px; 
+    animation-name: sideHeader; 
+    animation-duration: 4s;
+} 
+
+
 
 /* nav bar in here */ 
 
